/*
 * Copyright 2014 Google Inc. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
package com.google.doubleclick;
option java_outer_classname = "DcExt";

import "openrtb.proto";
import "openrtb-native.proto";
import "network-bid.proto";

//
// OpenRTB Extensions for DoubleClick Ad Exchange (ID=101..109).
//
// These "Link" extensions are for in-memory / internal use only, not for on-wire messages.
// This is because the DoubleClick Ad Exchange doesn't yet support OpenRTB on the wire
// (so there's no point in providing support to map these to JSON either).
// Even if this support is added in the future, it won't look anything like this, would
// require different message types instead of just reusing the native protocol's messages
// (only fields that don't map well to OpenRTB would need extensions).
//

extend com.google.openrtb.BidRequest {
  /** Reference to the corresponding node in the DoubleClick request. */
  optional com.google.protos.adx.BidRequest bidRequest = 101;
}

extend com.google.openrtb.BidRequest.Device {
  /** Reference to the corresponding node in the DoubleClick request. */
  optional com.google.protos.adx.BidRequest.Mobile mobile = 101;
}

extend com.google.openrtb.BidRequest.Geo {
  /** Decrypted content of BidRequest.encrypted_hyperlocal_set. */
  optional com.google.protos.adx.BidRequest.HyperlocalSet hyperLocal = 102;
}

extend com.google.openrtb.BidRequest.Imp {
  /** Reference to the corresponding node in the DoubleClick request. */
  optional com.google.protos.adx.BidRequest.AdSlot adSlot = 101;
}

extend com.google.openrtb.BidRequest.Imp.Video {
  /** Reference to the corresponding node in the DoubleClick request. */
  optional com.google.protos.adx.BidRequest.Video video = 101;
}

extend com.google.openrtb.BidRequest.Imp.Pmp {
  /** Reference to the corresponding node in the DoubleClick request. */
  optional com.google.protos.adx.BidRequest.AdSlot.MatchingAdData adData = 101;
}

extend com.google.openrtb.NativeRequest.Asset {
  /** Reference to the corresponding node in the DoubleClick request. */
  optional com.google.protos.adx.BidRequest.AdSlot.NativeAdTemplate nativ = 101;
}

extend com.google.openrtb.BidResponse {
  /** Reference to the corresponding node in the DoubleClick response. */
  optional com.google.protos.adx.BidResponse bidResponse = 101;
}

extend com.google.openrtb.BidResponse.SeatBid.Bid {
  /** Reference to the corresponding node in the DoubleClick response. */
  optional com.google.protos.adx.BidResponse.Ad ad = 101;
}
